--- a/AvinyaAICRM.Application/AvinyaAICRM.Application.csproj
+++ b/AvinyaAICRM.Application/AvinyaAICRM.Application.csproj
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.23" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.12" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
