--- a/AvinyaAICRM.Application/AvinyaAICRM.Application.csproj
+++ b/AvinyaAICRM.Application/AvinyaAICRM.Application.csproj
@@ -14,13 +14,13 @@
 
 	<ItemGroup>
 		<Folder Include="Features\" />
-		<Folder Include="Validators\" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.23" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.12" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
+		<PackageReference Include="Microsoft.ML" Version="5.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
 	</ItemGroup>
