Team and temMember modules

--- a/AvinyaAICRM.API/appsettings.json
+++ b/AvinyaAICRM.API/appsettings.json
@@ -6,7 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-MDROT21\\SQLEXPRESS;Database=AvinyaAICRM;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-MDROT21\\SQLEXPRESS;Database=AvinyaAICRM;Trusted_Connection=True;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server=190.92.174.109;Database=AvinyaCrm;User ID=avinyacrm;Password=avinyacrm@5039;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Key": "AvinyaAICRM_Super_Strong_JWT_Key_1234567890_!@#2025",
+    "Issuer": "AvinyaAICRM",
+    "Audience": "AvinyaAICRMUsers",
+    "DurationInDays": 7
   },
   "AllowedHosts": "*"
 }
